# django-tamara

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tamara/: __init__.py  apps.py  client.py  conf.py  exceptions.py  models.py  urls.py  views.py
src/tamara/migrations/: 0001_initial.py
src/tamara/templates/tamara/: admin_config.html
tests/: conftest.py  settings.py  test_client.py  test_views.py  urls.py
